Runners avarage height calculation and display on  http://localhost:8080/runners address below the table.

--- a/src/main/resources/templates/runners.html
+++ b/src/main/resources/templates/runners.html
@@ -30,6 +30,7 @@
         </tr>
         </tbody>
     </table>
+    <h2>Futók átlagmagassága: <span th:text="${averageHeight}"></span></h2>
 </div>
 </body>
 </html>
