Trying to fix sponsor not resolved issue.

--- a/src/main/resources/templates/runner.html
+++ b/src/main/resources/templates/runner.html
@@ -24,6 +24,10 @@
       <td th:text="${averageLaptime}"></td>
     </tr>
     <tr>
+      <th>Average Lap Time:</th>
+      <td th:text="${runner.sponsor}"></td>
+    </tr>
+    <tr>
       <td colspan="2">
         <table class="table">
           <thead>
